--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -21,14 +21,19 @@
 
 body {
     background-color: #FDFFE7;
+    min-width: 124px;
+    max-width: 601px;
+    margin: auto;
 }
 
 header {
     margin-top: 20px;
     min-height: 150px;
-    text-align: center;
+    text-align: left;
     padding-top: 50px;
-    
+    height: auto;
+    width: auto;
+    display: flex;
 }
 
 header h3 {
@@ -37,17 +42,22 @@ header h3 {
     font-weight: bold;
     color:var(--color-1);
     display: inline;
-    padding: 40px 32px;
+    padding-left: 0;
+    padding-top: -30px;
+    margin-top: -30;
+    display: flex;
 }
 
 header img {
     border-radius: 50%;
-    width: 96px;
-    height: 96px;
+    width: 100px;
+    height: 100px;
     background-size: cover;
     background-position: right;
-    display: inline;
-    padding-left: -40px;
+    display: flex;
+    justify-content: right;
+    align-items: ;
+
 }
 
 .title {
