flex box active

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -43,20 +43,19 @@ header h3 {
     color:var(--color-1);
     display: inline;
     padding-left: 0;
-    padding-top: -30px;
-    margin-top: -30;
+    margin-top: -10px;
+    margin-right: 300px;
     display: flex;
+
 }
 
 header img {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-size: cover;
-    background-position: right;
+    width: 110px;
+    height: 110px;
     display: flex;
-    justify-content: right;
-    align-items: ;
+    text-align: right;
+    align-content: flex-end;
 
 }
 
