--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -26,7 +26,27 @@ body {
     margin: auto;
 }
 
-header {
+.container {
+    display: flex;
+    align-items: center;
+    margin: 40px 0px 55px 0px;
+    justify-content: space-between;
+}
+
+.container h3 {
+    font-family: var(--font-secundary);
+    color: var(--color-1);
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.container img {
+    height: 110px;
+    width: 110px;
+    border-radius: 50%;
+}
+
+/*header {
     margin-top: 10px;
     min-height: 150px;
     text-align: left;
@@ -56,16 +76,16 @@ header img {
     text-align: right;
     align-content: flex-end;
 
-}
+}*/
 
 .title {
     font-family: var(--font-primary);
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 00;
     line-height: 1.3;
     color: var(--color-1);
     text-align: left;
-    margin-top: 40px;
+    margin-top: 100px;
 }
 
 .descrition {
@@ -154,3 +174,5 @@ footer span:hover {
 .country {
     font-size: 25px;
 }
+
+
